[gd_scene format=3 uid="uid://bis10o6va5s7y"]

[ext_resource type="Script" uid="uid://nr5lxcqdrqip" path="res://Game Scenes/GUIUpdateAnchors.gd" id="1_q7jbj"]
[ext_resource type="PackedScene" uid="uid://dsl5g3aqxbchp" path="res://Textures/Skatboard.tscn" id="2_1jaxx"]

[node name="ScoreGUI" type="Control" unique_id=405849922]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q7jbj")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=15899561]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 45.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="LifeVbox" type="VBoxContainer" parent="HBoxContainer" unique_id=700237836]
layout_mode = 2

[node name="lifeLabel" type="Label" parent="HBoxContainer/LifeVbox" unique_id=1534690049]
layout_mode = 2
text = "Lives"

[node name="lifePlayer" type="Label" parent="HBoxContainer/LifeVbox" unique_id=213767677]
layout_mode = 2

[node name="TimerVbox" type="VBoxContainer" parent="HBoxContainer" unique_id=582231576]
layout_mode = 2

[node name="TimerLabel" type="Label" parent="HBoxContainer/TimerVbox" unique_id=494700573]
layout_mode = 2
text = "Timer"

[node name="TimerPlayer" type="Label" parent="HBoxContainer/TimerVbox" unique_id=1497111196]
layout_mode = 2

[node name="ScoreVBOX" type="VBoxContainer" parent="HBoxContainer" unique_id=941686724]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="HBoxContainer/ScoreVBOX" unique_id=793234032]
layout_mode = 2
text = "Score"

[node name="ScorePlayer" type="Label" parent="HBoxContainer/ScoreVBOX" unique_id=301841165]
layout_mode = 2

[node name="MultVbox" type="VBoxContainer" parent="HBoxContainer" unique_id=2000335886]
layout_mode = 2

[node name="MultLabel" type="Label" parent="HBoxContainer/MultVbox" unique_id=834596712]
layout_mode = 2
text = "Multiplier"

[node name="MultPlayer" type="Label" parent="HBoxContainer/MultVbox" unique_id=590099083]
layout_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="." unique_id=1603668423]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 73.62
offset_right = -86.0
offset_bottom = 135.62006
grow_horizontal = 0
scale = Vector2(2, 2)

[node name="SubViewportContainer" type="SubViewportContainer" parent="AspectRatioContainer" unique_id=1391915831]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="AspectRatioContainer/SubViewportContainer" unique_id=617152603]
handle_input_locally = false
size = Vector2i(194, 62)
render_target_update_mode = 4

[node name="Sprite2D4" parent="AspectRatioContainer/SubViewportContainer/SubViewport" unique_id=695214684 instance=ExtResource("2_1jaxx")]
